Disable ClickFinger for touchpads with more than one physical button (#26079)

If a touchpad has more than just one (or no) button, don't enable any
ClickFinger settings other than button 1.

The old default of enabling those clickfingers can be confusing on devices
that have left and right buttons but no middle. In that case, leaving three
fingers on the touchpad and clicking will result in a button 2 press
(usually paste). But leaving one or two fingers on the touchpad while
clicking will simply send button 1 events.

This can appear like spurious button 2 events to the user.

X.Org Bug 26079 <http://bugs.freedesktop.org/show_bug.cgi?id=26079>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>